# Gen-COMPAS

./: .gitignore  LICENSE  README.md  config.yaml  ensemble.2.py  pyproject.toml  run.py  vcn_ensemble.py
common/: diffusion_sample.py  diffusion_train.py  vcn_ensemble.py  vcn_slice.py  vcn_train.py
examples/0.DEMO_Trp-cage/Dataset/: trp_noh.psf
examples/0.DEMO_Trp-cage/NAMD_inputs/: TMD.A.conf  TMD.B.conf  Unbiased.A.conf  Unbiased.B.conf  colvars.in
examples/0.DEMO_Trp-cage/NAMD_inputs/TOP_files/: Unbiased_A.coor  Unbiased_A.vel  Unbiased_A.xsc  Unbiased_B.coor  Unbiased_B.vel  Unbiased_B.xsc  colvars.in  input.psf  trp.psf
examples/1.NANMA/NAMD_inputs/: TMD.A.conf  TMD.B.conf  Unbiased.A.conf  Unbiased.B.conf
examples/1.NANMA/NAMD_inputs/TOP_files/: colvars.in
examples/2.Trialanine/NAMD_inputs/: TMD.A.conf  TMD.B.conf  Unbiased.A.conf  Unbiased.B.conf  colvars.in
examples/3.RBP/NAMD_inputs/: TMD.A.conf  TMD.B.conf  Unbiased.A.conf  Unbiased.B.conf
examples/5.Vo-domain/NAMD_inputs/: TMD.A.conf  TMD.B.conf  Unbiased.A.conf  Unbiased.B.conf  colvars.in
examples/6.nAChR/NAMD_inputs/: A.xsc  B.xsc  TMD.A.conf  TMD.B.conf  Unbiased.A.conf  Unbiased.B.conf  colvars.in  run.sh
tmd/: check.rmsd.py  interpolate.q.py  q.variance.py  violin.plot.py
tools/: __init__.py  analyzeriteweight.py  clustering.py  felestimate.py  multistate.py  occupancy.py  reweighting.py  riteweight.py
utils/: data_loader.py  diffusion.py  embedding.py  logger.py  model.py
vcn/: __init__.py  config.ensemble.template.yaml  model.py  zmatrix.py
(+50 files in other folders)
